--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 body {
-    background-color: white;
-    font-family: 'Open Sans';
-    font-weight: 30px;
+  background-color: white;
+  font-family: 'Open Sans';
+  font-weight: 30px;
 
 }
 
 h3 {
-    font-size: medium;
-    letter-spacing: 1px;
+  font-size: medium;
+  letter-spacing: 1px;
 }
 
 /*header {
@@ -16,84 +16,80 @@ h3 {
 }*/
 
 .page-header {
-    display: flex;
-    width: 100%;
-    padding: 20px;
+  display: flex;
+  width: 100%;
+  padding: 20px;
 
 }
 
 .page-header-item {
-    flex: 0 1 200px;
+  flex: 0 1 200px;
 }
 
 .navigation-list {
-    list-style-type: none;
-    margin-left: auto;
-    margin-right: 50px;
+  list-style-type: none;
+  margin-left: auto;
+  margin-right: 50px;
 
 }
 
 .navigation-list li {
-    display: inline-block;
-    margin-left: 15px;
+  display: inline-block;
+  margin-left: 15px;
 
 }
 
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    padding: 14px 16px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  padding: 14px 16px;
 }
 
 li {
-    float: left;
+  float: left;
 }
 
 li a {
-    display: block;
-    color: #064789;
-    margin-top: 10px;
-    text-align: center;
-    padding: 14px 16px;
-    font-size: x-large;
-    text-decoration: none;
+  display: block;
+  color: #064789;
+  margin-top: 10px;
+  text-align: center;
+  padding: 14px 16px;
+  font-size: x-large;
+  text-decoration: none;
 }
 
 li a:hover:not(.active) {
-    background-color: #064789;
-    color: white;
-    text-decoration: underline;
+  background-color: #064789;
+  color: white;
+  text-decoration: underline;
 }
 
 .active {
-    background-color: #064789;
-    color: white;
-    text-decoration: underline;
+  background-color: #064789;
+  color: white;
+  text-decoration: underline;
 
 }
 
 div {
-    color: #064789;
-    margin-top: 50px;
-    margin-left: 50px;
-    margin-right: 200px;
+  color: #064789;
+  margin-top: 50px;
+  margin-left: 50px;
+  margin-right: 200px;
 
 }
 
 td,
 th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
 }
 
-button:hover,
-button:focus {
-    cursor: pointer;
-    opacity: 0.5;
-}
+
 
 /*footer {
     color: white;
@@ -104,67 +100,217 @@ button:focus {
 }*/
 .profile {
 
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
 
 .flex-container {
-    display: flex;
-    flex-wrap: nowrap;
+  display: flex;
+  flex-wrap: nowrap;
 }
 
 .flex-container div {
 
-    margin: 10px;
-    padding: 20px;
-    flex-grow: 1;
+  margin: 10px;
+  padding: 20px;
+  flex-grow: 1;
 
 }
 
 .profile_pic {
-    border: 5px solid #c5d7e8;
-    float: left;
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    margin-left: 200px;
+  border: 5px solid #c5d7e8;
+  float: left;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  margin-left: 200px;
 
 }
 
+.aboutme-content {
+  display: flex;
+  flex-flow: column wrap;
+  width: 900px;
+  margin: auto;
+  margin-top: 50px;
+}
+
+.aboutme-content p {
+  font-size: 20px;
+}
 
 .page-footer {
-    display: flex;
-    flex-direction: column-reverse;
-    text-align: center;
-    /*  border: 1px solid white;
+  display: flex;
+  flex-direction: column-reverse;
+  text-align: center;
+  /*  border: 1px solid white;
     box-sizing: border-box;*/
 }
 
 
 .grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 20px;
-    margin: 0 24px 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 20px;
+  margin: 0 24px 0;
 }
 
 .grid-item {
-    background-color: #034281;
-    color: white;
-    width: auto;
-    min-height: auto;
-    margin: 0;
-    padding: 24px;
+  background-color: #034281;
+  color: white;
+  width: auto;
+  min-height: auto;
+  margin: 0;
+  padding: 24px;
 
 }
 
 .grid_item:last-child {
-    grid-column: 3/3;
-    grid-row: 1/3;
+  grid-column: 3/3;
+  grid-row: 1/3;
 }
 
 .grid-item a {
-    float: right;
-    color: white;
+  float: right;
+  color: white;
+}
+
+
+@media all and (max-width:500px) {
+  .grid {
+    grid-template-columns: 1 fr;
+    grid-gap: 10px;
+  }
+
+  .grid_item:last-child {
+    grid-column: auto/auto;
+    grid-row: auto/auto;
+  }
+
+  h1 {
+    font-size: 22px;
+  }
+
+}
+
+@media all and (min-width:500px) and (max-width:750px) {
+  .grid {
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
+  }
+
+  .grid_item:last-child {
+    grid-column: auto/auto;
+    grid-row: auto/auto;
+  }
+
+  h1 {
+    font-size: 22px;
+  }
+}
+
+.button1 {
+  background-color: #315b86;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  font-size: 20px;
+  border-radius: 12px;
+  width: 100px;
+  text-align: center;
+  margin: auto;
+
+}
+
+
+.button1:hover {
+  background-color: #064789;
+  color: white;
+  font-size: 25px;
+  width: 120px;
+}
+
+.link:hover {
+  text-decoration: none;
+
+}
+
+@keyframes color-change {
+  from {
+    fill: #FDD056;
+  }
+
+  to {
+    fill: #ab6e22;
+  }
+}
+
+@keyframes color-change {
+  0% {
+    fill: #FDD056;
+  }
+
+  50% {
+    fill: #ab6e22;
+  }
+
+  100% {
+    fill: #FDAF63;
+  }
+}
+
+.sun {
+  animation-duration: 4s;
+  animation-name: color-change;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+
+}
+
+
+
+/* .cloud-front {
+    animation-duration: 10s;
+    animation-name: cloud-move;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-timing-function: linear;
+    
+  }  */
+
+.cloud-front {
+  animation: 30s cloud-move infinite alternate linear;
+}
+
+@keyframes cloud-move {
+  from {
+    transform: translate(0, 50px);
+  }
+
+  to {
+    transform: translate(200px, 50px);
+  }
+}
+
+.cloud-back {
+  animation: 30s cloud-move-reverse infinite alternate linear;
+}
+
+@keyframes cloud-move-reverse {
+  from {
+    transform: translate(446px, 48px);
+  }
+
+  to {
+    transform: translate(100px, 48px);
+  }
 }
