--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,23 @@
+:root {
+  --primaryColor: #064789;
+  --secondaryColor: white;
+  --tableBorder: #dddddd;
+  --gridBackground: #034281;
+  --colorChange: #FDAF63;
+  --colorChangeFrom: #FDD056;
+  --colorChangeTo: #ab6e22;
+  --buttonHover: rgb(0, 24, 46);
+  --stopColor: #b94141;
+  --font-family: 'Open Sans';
+}
+
 body {
-  background-color: white;
-  font-family: 'Open Sans';
+
+  background-color: var(--secondaryColor);
+  font-family: var(--font-family);
   font-weight: 30px;
 
 }
-
-h3 {
-  font-size: medium;
-  letter-spacing: 1px;
-}
-
-/*header {
-    background-color: white;
-    height: 100px;
-}*/
 
 .page-header {
   display: flex;
@@ -24,6 +28,11 @@ h3 {
 
 .page-header-item {
   flex: 0 1 200px;
+}
+
+h3 {
+  font-size: medium;
+  letter-spacing: 1px;
 }
 
 .navigation-list {
@@ -53,7 +62,7 @@ li {
 
 li a {
   display: block;
-  color: #064789;
+  color: var(--primaryColor);
   margin-top: 10px;
   text-align: center;
   padding: 14px 16px;
@@ -62,20 +71,20 @@ li a {
 }
 
 li a:hover:not(.active) {
-  background-color: #064789;
-  color: white;
+  background-color: var(--primaryColor);
+  color: var(--secondaryColor);
   text-decoration: underline;
 }
 
 .active {
-  background-color: #064789;
-  color: white;
+  background-color: var(--primaryColor);
+  color: var(--secondaryColor);
   text-decoration: underline;
 
 }
 
 div {
-  color: #064789;
+  color: var(--primaryColor);
   margin-top: 50px;
   margin-left: 50px;
   margin-right: 200px;
@@ -84,20 +93,11 @@ div {
 
 td,
 th {
-  border: 1px solid #dddddd;
+  border: 1px solid var(--tableBorder);
   text-align: left;
   padding: 8px;
 }
 
-
-
-/*footer {
-    color: white;
-    margin-left: 50px;
-    margin-top: 50px;
-    display: flex;
-
-}*/
 .profile {
 
   margin-left: auto;
@@ -119,7 +119,7 @@ th {
 }
 
 .profile_pic {
-  border: 5px solid #c5d7e8;
+  border: 5px solid var(--tableBorder);
   float: left;
   width: 200px;
   height: 200px;
@@ -157,8 +157,8 @@ th {
 }
 
 .grid-item {
-  background-color: #034281;
-  color: white;
+  background-color: var(--gridBackground);
+  color: var(--secondaryColor);
   width: auto;
   min-height: auto;
   margin: 0;
@@ -173,7 +173,7 @@ th {
 
 .grid-item a {
   float: right;
-  color: white;
+  color: var(--secondaryColor);
 }
 
 
@@ -211,9 +211,9 @@ th {
 }
 
 .button1 {
-  background-color: #315b86;
+  background-color: var(--primaryColor);
   border: none;
-  color: white;
+  color: var(--secondaryColor);
   padding: 16px 32px;
   text-align: center;
   text-decoration: none;
@@ -232,8 +232,8 @@ th {
 
 
 .button1:hover {
-  background-color: #064789;
-  color: white;
+  background-color: var(--primaryColor);
+  color: var(--secondaryColor);
   font-size: 25px;
   width: 120px;
 }
@@ -245,25 +245,25 @@ th {
 
 @keyframes color-change {
   from {
-    fill: #FDD056;
+    fill: var(--colorChangeFrom);
   }
 
   to {
-    fill: #ab6e22;
+    fill: var(--colorChangeTo);
   }
 }
 
 @keyframes color-change {
   0% {
-    fill: #FDD056;
+    fill: var(--colorChangeFrom);
   }
 
   50% {
-    fill: #ab6e22;
+    fill: var(--colorChangeTo);
   }
 
   100% {
-    fill: #FDAF63;
+    fill: var(--colorChange);
   }
 }
 
@@ -275,17 +275,6 @@ th {
   animation-timing-function: linear;
 
 }
-
-
-
-/* .cloud-front {
-    animation-duration: 10s;
-    animation-name: cloud-move;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    animation-timing-function: linear;
-    
-  }  */
 
 .cloud-front {
   animation: 30s cloud-move infinite alternate linear;
